--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "app.js",
 	"scripts": {
 		"test": "node_modules/.bin/_mocha test/unit/**/*.spec.js",
+		"postinstall": "node_modules/.bin/tsc",
 		"compile": "node_modules/.bin/tsc",
 		"start": "ts-node  app/app.ts",
 		"dev": "node_modules/.bin/nodemon"
