--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
 	"dependencies": {
 		"@types/restify": "^7.2.6",
 		"bunyan": "^1.8.12",
-		"restify": "^4.1.1"
+		"restify": "^4.1.1",
+		"ts-node": "^7.0.1",
+		"typescript": "^3.1.6"
 	},
 	"devDependencies": {
 		"nodemon": "^1.18.8",
-		"ts-node": "^7.0.1",
-		"tslint": "^5.11.0",
-		"typescript": "^3.1.6"
+		"tslint": "^5.11.0"
 	}
 }
